fix(quasar): QScrollArea - fix thumb cursor and directive when invisible
close #3353

--- a/quasar/src/components/scroll-area/scroll-area.styl
+++ b/quasar/src/components/scroll-area/scroll-area.styl
@@ -4,10 +4,12 @@
   right 0
   opacity .2
   transition opacity .3s
-  &--invisible
-    opacity 0 !important
   &:hover
     opacity .3
     cursor grab
   &:active
     opacity .5
+  &--invisible
+    opacity 0 !important
+    &:hover
+      cursor inherit
